@@ -276,6 +276,7 @@
 				var ajaxRequest = $.ajax({
 					url: ajaxUrl.getUrl(),
 					type: 'post',
+					cache: false,
 					data: {},
 					dataType: 'html',
 					success: function(html) {
