@@ -60,7 +60,7 @@ class testPageItemPrototypes extends CWebTest {
 		$this->zbxTestTextNotPresent('Info');
 		// TODO someday should check that interval is not shown for trapper items, trends not shown for non-numeric items etc
 
-		$this->zbxTestTextPresent(['Enable', 'Disable', 'Delete']);
+		$this->zbxTestTextPresent(['Create disabled', 'Delete']);
 	}
 
 	/**
