@@ -1,5 +1,7 @@
 if AGENT
-AGENT_tests = SYSTEM_LOCALTIME
+AGENT_tests = \
+	SYSTEM_LOCALTIME \
+	WEB_PAGE_GET
 endif
 
 noinst_PROGRAMS = $(AGENT_tests)
@@ -58,4 +60,26 @@ SYSTEM_LOCALTIME_LDADD += @AGENT_LIBS@
 SYSTEM_LOCALTIME_LDFLAGS = @AGENT_LDFLAGS@
 
 SYSTEM_LOCALTIME_CFLAGS = $(SYSTEM_LOCALTIME_WRAP_FUNCS) $(COMMON_COMPILER_FLAGS)
+
+
+
+WEB_PAGE_GET_SOURCES = \
+	WEB_PAGE_GET.c \
+	$(COMMON_SRC_FILES)
+
+WEB_PAGE_GET_WRAP_FUNCS = \
+	-Wl,--wrap=zbx_tcp_connect \
+	-Wl,--wrap=zbx_tcp_send_ext \
+	-Wl,--wrap=zbx_tcp_recv_raw_ext \
+	-Wl,--wrap=zbx_tcp_close
+
+WEB_PAGE_GET_LDADD = \
+	$(COMMON_LIB_FILES)
+
+WEB_PAGE_GET_LDADD += @AGENT_LIBS@
+
+WEB_PAGE_GET_LDFLAGS = @AGENT_LDFLAGS@
+
+WEB_PAGE_GET_CFLAGS = $(WEB_PAGE_GET_WRAP_FUNCS) $(COMMON_COMPILER_FLAGS)
+
 endif
