@@ -21,6 +21,10 @@ A......... [ZBX-3783] added audit for action.delete() and correlation.delete() m
 ..F....... [ZBXNEXT-4414] added support for configurable number of displayed tags (agriscenko)
 
 Bug fixes:
+..F....... [ZBX-12821] fixed multiple javascript memory leaks (miks)
+........S. [ZBX-13755] fixed proxy lastaccess update on 32-bit Zabbix server (vso)
+..F....... [ZBX-12425] fixed selection of web items in the "Plain text" screen element (Sasha)
+...G...... [ZBX-13781] fixed CRLF injection in Zabbix Agentd (MVekslers)
 ..F....... [ZBX-13737] fixed invalid confirmation message when mass enabling and disabling trigger, item and host prototypes (Ivo)
 ........S. [ZBX-13766] fixed comparison of two large float numbers in expressions (Sergejs)
 .......PS. [ZBX-13481] fixed incorrect parsing of BITS data type in SNMP response (vso)
@@ -267,6 +271,10 @@ Changes for 3.4.9rc1
 New features:
 
 Bug fixes:
+..F....... [ZBX-12821] fixed multiple javascript memory leaks (miks)
+........S. [ZBX-13755] fixed proxy lastaccess update on 32-bit Zabbix server (vso)
+..F....... [ZBX-12425] fixed selection of web items in the "Plain text" screen element (Sasha)
+...G...... [ZBX-13781] fixed CRLF injection in Zabbix Agentd (MVekslers)
 ........S. [ZBX-13766] fixed comparison of two large float numbers in expressions (Sergejs)
 .......PS. [ZBX-13481] fixed incorrect parsing of BITS data type in SNMP response (vso)
 .......PS. [ZBX-13744] fixed potential shared memory leak when item is removed (Sergejs)
@@ -1464,6 +1472,8 @@ Changes for 3.0.17rc1
 New features:
 
 Bug fixes:
+..F....... [ZBX-12425] fixed selection of web items in the "Plain text" screen element (Sasha)
+...G...... [ZBX-13781] fixed CRLF injection in Zabbix Agentd (MVekslers)
 ........S. [ZBX-13766] fixed comparison of two large float numbers in expressions (Sergejs)
 .......PS. [ZBX-13481] fixed incorrect parsing of BITS data type in SNMP response (vso)
 A.F....... [ZBX-13742] fixed parsing of the operator "not" in trigger expression (Sasha)
@@ -3369,6 +3379,7 @@ Changes for 2.2.22rc1
 New features:
 
 Bug fixes:
+...G...... [ZBX-13781] fixed CRLF injection in Zabbix Agentd (MVekslers)
 
 --------------------------------------------------------------------------------
 Changes for 2.2.21
